@@ -20,12 +20,14 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.lang.invoke.MethodHandles;
 import java.net.URL;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
-import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Base64;
 import java.util.List;
 import java.util.Map;
 import java.util.concurrent.TimeUnit;
+import java.util.stream.Collectors;
 
 import org.apache.commons.io.FilenameUtils;
 import org.apache.commons.lang3.StringUtils;
@@ -35,12 +37,16 @@ import org.openqa.selenium.NoSuchElementException;
 import org.openqa.selenium.WebDriver;
 import org.openqa.selenium.WebDriverException;
 import org.openqa.selenium.WebElement;
+import org.openqa.selenium.remote.DriverCommand;
+import org.openqa.selenium.remote.RemoteWebElement;
+import org.openqa.selenium.remote.Response;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import com.google.common.collect.ImmutableMap;
 import com.qaprosoft.carina.core.foundation.commons.SpecialKeywords;
 import com.qaprosoft.carina.core.foundation.report.ReportContext;
+import com.qaprosoft.carina.core.foundation.utils.Configuration;
 import com.qaprosoft.carina.core.foundation.utils.android.Permissions.Permission;
 import com.qaprosoft.carina.core.foundation.utils.android.Permissions.PermissionAction;
 import com.qaprosoft.carina.core.foundation.utils.android.Permissions.PermissionType;
@@ -52,143 +58,232 @@ import com.qaprosoft.carina.core.foundation.webdriver.IDriverPool;
 import com.qaprosoft.carina.core.foundation.webdriver.decorator.ExtendedWebElement;
 
 import io.appium.java_client.AppiumBy;
+import io.appium.java_client.ExecutesMethod;
+import io.appium.java_client.android.Activity;
+import io.appium.java_client.android.AndroidBatteryInfo;
+import io.appium.java_client.android.AuthenticatesByFinger;
+import io.appium.java_client.android.CanReplaceElementValue;
+import io.appium.java_client.android.GsmCallActions;
+import io.appium.java_client.android.GsmSignalStrength;
+import io.appium.java_client.android.GsmVoiceState;
+import io.appium.java_client.android.HasAndroidClipboard;
+import io.appium.java_client.android.HasAndroidDeviceDetails;
+import io.appium.java_client.android.HasSupportedPerformanceDataType;
+import io.appium.java_client.android.NetworkSpeed;
+import io.appium.java_client.android.PowerACState;
+import io.appium.java_client.android.StartsActivity;
 import io.appium.java_client.android.SupportsNetworkStateManagement;
+import io.appium.java_client.android.SupportsSpecialEmulatorCommands;
 import io.appium.java_client.android.connection.HasNetworkConnection;
+import io.appium.java_client.android.geolocation.AndroidGeoLocation;
+import io.appium.java_client.android.geolocation.SupportsExtendedGeolocationCommands;
 import io.appium.java_client.android.nativekey.AndroidKey;
 import io.appium.java_client.android.nativekey.KeyEvent;
 import io.appium.java_client.android.nativekey.KeyEventFlag;
 import io.appium.java_client.android.nativekey.PressesKey;
+import io.appium.java_client.battery.HasBattery;
+import io.appium.java_client.clipboard.ClipboardContentType;
 
+/**
+ * Contains utility methods for working with android devices
+ */
 public interface IAndroidUtils extends IMobileUtils {
-
-    // TODO: review carefully and remove duplicates and migrate completely to fluent
-    // waits
+    // todo add HasAndroidSettings methods
+    // todo add methods from ListensToLogcatMessages
+    // todo add methods from ExecuteCDPCommand
+    // TODO: review carefully and remove duplicates and migrate completely to fluent waits
     static final Logger UTILS_LOGGER = LoggerFactory.getLogger(MethodHandles.lookup().lookupClass());
 
     static final int SCROLL_MAX_SEARCH_SWIPES = 55;
     static final long SCROLL_TIMEOUT = 300;
-    AdbExecutor executor = new AdbExecutor();
-    String[] baseInitCmd = executor.getDefaultCmd();
+    static final AdbExecutor executor = new AdbExecutor();
+    static final String[] baseInitCmd = executor.getDefaultCmd();
     static final String LANGUAGE_CHANGE_APP_PATH = "app/ADB_Change_Language.apk";
 
-    static final String SHELL_INIT_CONSOLE = "mobile: shell";
-    static final String SHELL_INIT_DEEPLINK_CONSOLE = "mobile:deepLink";
-    static final String SHELL_INIT_GET_PERMISSION_CONSOLE = "mobile:getPermissions";
-    static final String SHELL_INIT_CHANGE_PERMISSION_CONSOLE = "mobile:changePermissions";
-
-    static final String SHELL_GPS_STATUS_CMD = "settings get secure location_providers_allowed";
-    static final String SHELL_CLOSE_STATUS_BAR_CMD = "cmd statusbar collapse";
-    static final String SHELL_OPEN_STATUS_BAR_CMD = "cmd statusbar expand-notifications";
-    static final String SHELL_INPUT_TXT_CMD = "input text ";
-    static final String SHELL_OPEN_URL_CMD = "am start -a android.intent.action.VIEW";
-    static final String SHELL_CLEAR_CACHE_CMD = "pm clear";
-    static final String SHELL_OPEN_DEVICE_SETTINGS_CMD = "am start -a android.settings.SETTINGS";
-    static final String SHELL_TAKE_SCREENSHOT_CMD = "screencap -p";
-    static final String SHELL_DISABLE_GPS_CMD = "settings put secure location_providers_allowed -gps";
-    static final String SHELL_ENABLE_GPS_CMD = "settings put secure location_providers_allowed +gps";
-    static final String SHELL_PRESS_HOME_CMD = "input keyevent 3";
-    static final String SHELL_RECENT_APPS_CMD = "input keyevent KEYCODE_APP_SWITCH";
-
+    /**
+     * Send a key-press event to the keyboard
+     *
+     * @param key keyboard key, see {@link AndroidKey}
+     * 
+     * @throws UnsupportedOperationException if driver does not support this feature
+     * 
+     * @see <a href="https://android-developers.googleblog.com/2008/12/touch-mode.html">This method send key without leaving the touch-mode</a>
+     */
     default public void pressKeyboardKey(AndroidKey key) {
-        WebDriver driver = getDriver();
-        ((PressesKey) driver).pressKey(new KeyEvent(key).withFlag(KeyEventFlag.SOFT_KEYBOARD)
-                .withFlag(KeyEventFlag.KEEP_TOUCH_MODE).withFlag(KeyEventFlag.EDITOR_ACTION));
-    }
+        PressesKey driver = null;
+        try {
+            driver = (PressesKey) getDriver();
+        } catch (ClassCastException e) {
+            throw new UnsupportedOperationException("Driver is not support pressKeyboardKey method", e);
+        }
 
-    default public void pressBack() {
-        WebDriver driver = getDriver();
-        ((PressesKey) driver).pressKey(new KeyEvent(AndroidKey.BACK));
+        driver.pressKey(new KeyEvent(key)
+                .withFlag(KeyEventFlag.SOFT_KEYBOARD)
+                .withFlag(KeyEventFlag.KEEP_TOUCH_MODE)
+                .withFlag(KeyEventFlag.EDITOR_ACTION));
     }
 
     /**
-     * Pressing "search" key of Android keyboard by coordinates.
-     * <p>
-     * Tested at Nexus 6P Android 8.0.0 standard keyboard. Coefficients of
-     * coordinates for other devices and custom keyboards could be different.
-     * <p>
-     * Following options are not working: 1.
-     * AndroidDriver.pressKeyCode(AndroidKeyCode.KEYCODE_SEARCH); 2.
-     * searchEditText.sendKeys("textToSearch" + "\n")
+     * Send a key-press event to the keyboard<br>
+     *
+     * @param key keyboard key, see {@link AndroidKey}
+     * @param flags event flags, see {@link KeyEventFlag}
+     * 
+     * @throws UnsupportedOperationException if driver does not support this feature
      */
-    default public void pressSearchKey() {
-        pressBottomRightKey();
+    default public void pressKeyboardKey(AndroidKey key, KeyEventFlag... flags) {
+        PressesKey driver = null;
+        try {
+            driver = (PressesKey) getDriver();
+        } catch (ClassCastException e) {
+            throw new UnsupportedOperationException("Driver is not support pressKeyboardKey method", e);
+        }
+        KeyEvent keyEvent = new KeyEvent(key);
+
+        if (flags != null && flags.length > 0) {
+            for (KeyEventFlag keyEventFlag : flags) {
+                keyEvent = keyEvent.withFlag(keyEventFlag);
+            }
+        }
+
+        driver.pressKey(keyEvent);
     }
 
+    /**
+     * Send a key-press events to the keyboard
+     *
+     * @param keys keyboard keys, see {@link AndroidKey}
+     * 
+     * @throws UnsupportedOperationException if driver does not support this feature
+     */
+    default public void pressKeyboardKeys(List<AndroidKey> keys) {
+        PressesKey driver;
+        try {
+            driver = (PressesKey) getDriver();
+        } catch (ClassCastException e) {
+            throw new UnsupportedOperationException("Driver is not support pressKeyboardKey(s) method", e);
+        }
+
+        keys.forEach(key -> driver.pressKey(new KeyEvent(key)));
+    }
+
+    /**
+     * Send a long press key event to the device
+     *
+     * @param keyEvent The generated native key event
+     */
+    default public void longPressKey(KeyEvent keyEvent) {
+        PressesKey driver;
+        try {
+            driver = (PressesKey) getDriver();
+        } catch (ClassCastException e) {
+            throw new UnsupportedOperationException("Driver is not support longPressKey method", e);
+        }
+
+        driver.longPressKey(keyEvent);
+    }
+
+    /**
+     * Send a key-press {@link AndroidKey#BACK} event to the keyboard
+     * 
+     * @throws UnsupportedOperationException if driver does not support this feature
+     */
+    default public void pressBack() {
+        PressesKey driver;
+        try {
+            driver = (PressesKey) getDriver();
+        } catch (ClassCastException e) {
+            throw new UnsupportedOperationException("Driver is not support pressBack method", e);
+        }
+        driver.pressKey(new KeyEvent(AndroidKey.BACK));
+    }
+
+    /**
+     * Send a key-press {@link AndroidKey#SEARCH} event to the keyboard
+     * 
+     * @throws UnsupportedOperationException if driver does not support this feature
+     */
+    default public void pressSearchKey() {
+        PressesKey driver;
+        try {
+            driver = (PressesKey) getDriver();
+        } catch (ClassCastException e) {
+            throw new UnsupportedOperationException("Driver is not support pressSearchKey method", e);
+        }
+        driver.pressKey(new KeyEvent(AndroidKey.SEARCH));
+    }
+
+    /**
+     * Press next key
+     */
     default public void pressNextKey() {
+        // todo investigate to use keyEvent with pressKey instead
         pressBottomRightKey();
     }
 
     // Change Device Language section
 
     /**
-     * change Android Device Language
-     * <p>
-     * Url: <a href=
-     * "http://play.google.com/store/apps/details?id=net.sanapeli.adbchangelanguage">
-     * ADBChangeLanguage apk </a> Change locale (language) of your device via ADB
-     * (on Android OS version 6.0, 5.0, 4.4, 4.3, 4.2 and older). No need to root
-     * your device! With ADB (Android Debug Bridge) on your computer, you can fast
-     * switch the device locale to see how your application UI looks on different
-     * languages. Usage: - install this app - setup adb connection to your device
-     * (http://developer.android.com/tools/help/adb.html) - Android OS 4.2 onwards
-     * (tip: you can copy the command here and paste it to your command console):
-     * adb shell pm grant net.sanapeli.adbchangelanguage
-     * android.permission.CHANGE_CONFIGURATION
-     * <p>
-     * English: adb shell am start -n
-     * net.sanapeli.adbchangelanguage/.AdbChangeLanguage -e language en Russian: adb
-     * shell am start -n net.sanapeli.adbchangelanguage/.AdbChangeLanguage -e
-     * language ru Spanish: adb shell am start -n
-     * net.sanapeli.adbchangelanguage/.AdbChangeLanguage -e language es
+     * change device language using ADBChangeLanguage application via ADB
      *
-     * @param language
-     *            to set. Can be es, en, etc.
-     * @return boolean
+     * <p>
+     * <b>Usage</b>: <br>
+     * - install this app <br>
+     * - setup adb connection to your device <br>
+     * (http://developer.android.com/tools/help/adb.html) - Android OS 4.2 onwards
+     * (tip: you can copy the command here and paste it to your command console): <br>
+     * {@code adb shell pm grant net.sanapeli.adbchangelanguage}
+     * android.permission.CHANGE_CONFIGURATION
+     *
+     * <p>
+     * English: {@code adb shell am start -n net.sanapeli.adbchangelanguage/.AdbChangeLanguage -e language en}<br>
+     * Russian: {@code adb shell am start -n net.sanapeli.adbchangelanguage/.AdbChangeLanguage -elanguage ru}<br>
+     * Spanish: {@code adb shell am start -n net.sanapeli.adbchangelanguage/.AdbChangeLanguage -e language es}<br>
+     *
+     *
+     * @param language to set, for example {@code es}, {@code en}, etc.
+     * 
+     * @see <a href="http://play.google.com/store/apps/details?id=net.sanapeli.adbchangelanguage">ADBChangeLanguage apk</a>
+     * @return was the language change successful
      */
     default public boolean setDeviceLanguage(String language) {
-        boolean status = setDeviceLanguage(language, 20);
-        return status;
+        int deviceRefreshTimeSec = 20;
+        return setDeviceLanguage(language, deviceRefreshTimeSec);
     }
 
     /**
-     * change Android Device Language
-     * <p>
-     * Url: <a href=
-     * "http://play.google.com/store/apps/details?id=net.sanapeli.adbchangelanguage">
-     * ADBChangeLanguage apk </a> Change locale (language) of your device via ADB
-     * (on Android OS version 6.0, 5.0, 4.4, 4.3, 4.2 and older). No need to root
-     * your device! With ADB (Android Debug Bridge) on your computer, you can fast
-     * switch the device locale to see how your application UI looks on different
-     * languages. Usage: - install this app - setup adb connection to your device
-     * (http://developer.android.com/tools/help/adb.html) - Android OS 4.2 onwards
-     * (tip: you can copy the command here and paste it to your command console):
-     * adb shell pm grant net.sanapeli.adbchangelanguage
-     * android.permission.CHANGE_CONFIGURATION
-     * <p>
-     * English: adb shell am start -n
-     * net.sanapeli.adbchangelanguage/.AdbChangeLanguage -e language en Russian: adb
-     * shell am start -n net.sanapeli.adbchangelanguage/.AdbChangeLanguage -e
-     * language ru Spanish: adb shell am start -n
-     * net.sanapeli.adbchangelanguage/.AdbChangeLanguage -e language es
+     * change device language using ADBChangeLanguage application via ADB
      *
-     * @param language
-     *            to set. Can be es, en, etc.
-     * @param waitTime
-     *            int wait in seconds before device refresh.
-     * @return boolean
+     * <p>
+     * <b>Usage</b>: <br>
+     * - install this app <br>
+     * - setup adb connection to your device <br>
+     * (http://developer.android.com/tools/help/adb.html) - Android OS 4.2 onwards
+     * (tip: you can copy the command here and paste it to your command console): <br>
+     * {@code adb shell pm grant net.sanapeli.adbchangelanguage android.permission.CHANGE_CONFIGURATION}
+
+     * <p>
+     * English: {@code adb shell am start -n net.sanapeli.adbchangelanguage/.AdbChangeLanguage -e language en}<br>
+     * Russian: {@code adb shell am start -n net.sanapeli.adbchangelanguage/.AdbChangeLanguage -elanguage ru}<br>
+     * Spanish: {@code adb shell am start -n net.sanapeli.adbchangelanguage/.AdbChangeLanguage -e language es}<br>
+     *
+     * @param language to set, for example {@code es}, {@code en}, etc.
+     * @param waitTime int wait in seconds before device refresh
+     *
+     * @see <a href="http://play.google.com/store/apps/details?id=net.sanapeli.adbchangelanguage">ADBChangeLanguage apk</a>
+     * @return was the language change successful
      */
     default public boolean setDeviceLanguage(String language, int waitTime) {
         boolean status = false;
-
-        UTILS_LOGGER.info("Do not concat language for Android. Keep: " + language);
+        UTILS_LOGGER.info("Do not concat language for Android. Keep: {}", language);
         language = language.replace("_", "-");
-        UTILS_LOGGER.info("Refactor language to : " + language);
+        UTILS_LOGGER.info("Refactor language to : {}", language);
 
         String actualDeviceLanguage = getDeviceLanguage();
 
-        if (language.contains(actualDeviceLanguage.toLowerCase())
-                || actualDeviceLanguage.toLowerCase().contains(language)) {
-            UTILS_LOGGER.info("Device already have expected language: " + actualDeviceLanguage);
+        if (language.contains(actualDeviceLanguage.toLowerCase()) ||
+                actualDeviceLanguage.toLowerCase().contains(language)) {
+            UTILS_LOGGER.info("Device already have expected language: {}", actualDeviceLanguage);
             return true;
         }
 
@@ -197,7 +292,7 @@ public interface IAndroidUtils extends IMobileUtils {
         String setLocalizationCmd = "shell am start -n net.sanapeli.adbchangelanguage/.AdbChangeLanguage -e language "
                 + language;
 
-        UTILS_LOGGER.info("Try set localization change permission with following cmd:" + setLocalizationChangePermissionCmd);
+        UTILS_LOGGER.info("Try set localization change permission with following cmd: {}", setLocalizationChangePermissionCmd);
         String expandOutput = executeAdbCommand(setLocalizationChangePermissionCmd);
 
         String pathToInstalledAppCmd = "shell pm path net.sanapeli.adbchangelanguage";
@@ -209,20 +304,19 @@ public interface IAndroidUtils extends IMobileUtils {
             expandOutput = executeAdbCommand(setLocalizationChangePermissionCmd);
         }
 
-        UTILS_LOGGER.info("Output after set localization change permission using 'ADB Change Language apk': " + expandOutput);
+        UTILS_LOGGER.info("Output after set localization change permission using 'ADB Change Language apk': {}", expandOutput);
 
-        UTILS_LOGGER.info("Try set localization to '" + language + "' with following cmd: " + setLocalizationCmd);
+        UTILS_LOGGER.info("Try set localization to '{}' with following cmd: {}", language, setLocalizationCmd);
         String changeLocaleOutput = executeAdbCommand(setLocalizationCmd);
-        UTILS_LOGGER.info("Output after set localization to '" + language + "' using 'ADB Change Language apk' : "
-                + changeLocaleOutput);
+        UTILS_LOGGER.info("Output after set localization to '{}' using 'ADB Change Language apk' : {}", language, changeLocaleOutput);
 
         if (waitTime > 0) {
-            UTILS_LOGGER.info("Wait for at least '" + waitTime + "' seconds before device refresh.");
+            UTILS_LOGGER.info("Wait for at least '{}' seconds before device refresh.", waitTime);
             CommonUtils.pause(waitTime);
         }
 
         actualDeviceLanguage = getDeviceLanguage();
-        UTILS_LOGGER.info("Actual Device Language: " + actualDeviceLanguage);
+        UTILS_LOGGER.info("Actual Device Language: {}", actualDeviceLanguage);
         if (language.contains(actualDeviceLanguage.toLowerCase())
                 || actualDeviceLanguage.toLowerCase().contains(language)) {
             status = true;
@@ -231,8 +325,9 @@ public interface IAndroidUtils extends IMobileUtils {
                 UTILS_LOGGER.info("Adb return empty response without errors.");
                 status = true;
             } else {
-                String currentAndroidVersion = IDriverPool.getDefaultDevice().getOsVersion();
-                UTILS_LOGGER.info("currentAndroidVersion=" + currentAndroidVersion);
+                String currentAndroidVersion = IDriverPool.getDefaultDevice()
+                        .getOsVersion();
+                UTILS_LOGGER.info("currentAndroidVersion={}", currentAndroidVersion);
                 if (currentAndroidVersion.contains("7.")) {
                     UTILS_LOGGER.info("Adb return language command do not work on some Android 7+ devices."
                             + " Check that there are no error.");
@@ -244,51 +339,67 @@ public interface IAndroidUtils extends IMobileUtils {
     }
 
     /**
-     * getDeviceLanguage
-     *
-     * @return String
+     * Get the current language on the device
+     * and
+     * 
+     * @return language, for example {@code fr}, or {@code fr-CA}
+     * @deprecated this method calls adb bypassing the driver, so use {@link #getSystemDeviceLanguage()} instead
      */
+    @Deprecated(forRemoval = true, since = "8.x")
     default public String getDeviceLanguage() {
+        // get language only, for example 'fr'
         String locale = executeAdbCommand("shell getprop persist.sys.language");
         if (locale.isEmpty()) {
+            // get locale, for example 'fr-CA'
             locale = executeAdbCommand("shell getprop persist.sys.locale");
         }
         return locale;
     }
 
+    /**
+     * Get the current language on the device
+     *
+     * @return language, for example {@code fr}, or {@code fr-CA}
+     */
+    default public String getSystemDeviceLanguage() {
+        // get language only, for example 'fr'
+        String locale = executeShell("getprop persist.sys.language").trim();
+        if (locale.isEmpty()) {
+            // get locale, for example 'fr-CA'
+            locale = executeShell("getprop persist.sys.locale");
+        }
+        // executeShell return value like as 'fr-CA/n', so need to trim
+        return locale.trim();
+    }
+
     // End Language Change section
 
     /**
-     * install android Apk by path to apk file.
-     *
-     * @param apkPath
-     *            String
+     * Install android Apk by path to apk file
+     * 
+     * @param apkPath path to apk
      */
     default public void installApk(final String apkPath) {
         installApk(apkPath, false);
     }
 
     /**
-     * install android Apk by path to apk or by name in classpath.
+     * Install android Apk by path to apk or by name in classpath
      *
-     * @param apkPath
-     *            String
-     * @param inClasspath
-     *            boolean
+     * @param apkPath path to apk
+     * @param inClasspath whether to search for apk in classpath
      */
     default public void installApk(final String apkPath, boolean inClasspath) {
-
         String filePath = apkPath;
+
         if (inClasspath) {
             URL baseResource = ClassLoader.getSystemResource(apkPath);
             if (baseResource == null) {
                 throw new RuntimeException("Unable to get resource from classpath: " + apkPath);
-            } else {
-                UTILS_LOGGER.debug("Resource was found: " + baseResource.getPath());
             }
+            UTILS_LOGGER.debug("Resource was found: {}", baseResource.getPath());
 
-            String fileName = FilenameUtils.getBaseName(baseResource.getPath()) + "."
-                    + FilenameUtils.getExtension(baseResource.getPath());
+            String fileName = FilenameUtils.getBaseName(baseResource.getPath()) + "." + FilenameUtils.getExtension(baseResource.getPath());
             // make temporary copy of resource in artifacts folder
             filePath = ReportContext.getArtifactsFolder().getAbsolutePath() + File.separator + fileName;
 
@@ -317,16 +428,16 @@ public interface IAndroidUtils extends IMobileUtils {
     }
 
     /**
-     * Scrolls into view in specified container by text only and return boolean
+     * Scrolls into view in specified container by text only and return found element
      *
-     * @param container
-     *            ExtendedWebElement - defaults to id Selector Type
-     * @param scrollToElement
-     *            String defaults to text Selector Type
-     * @return ExtendedWebElement
-     *         <p>
-     *         example of usage: ExtendedWebElement res =
-     *         AndroidUtils.scroll("News", newsListContainer);
+     * <p>
+     * example of usage: {@code ExtendedWebElement res = AndroidUtils.scroll("News", newsListContainer);}
+     *
+     * @param scrollToElement text to scroll to. Defaults to text Selector Type
+     * @param container the element in which the text will be searched. Defaults to id Selector Type
+     *
+     * @return if element was found, return {@link ExtendedWebElement}, otherwise return {@code null}
+     *
      **/
     default public ExtendedWebElement scroll(String scrollToElement, ExtendedWebElement container) {
         return scroll(scrollToElement, container, SelectorType.ID, SelectorType.TEXT);
@@ -335,18 +446,11 @@ public interface IAndroidUtils extends IMobileUtils {
     /**
      * Scrolls into view in a container specified by it's instance (index)
      * 
-     * @param scrollToEle
-     *            - has to be id, text, contentDesc or className
-     * @param scrollableContainer
-     *            - ExtendedWebElement type
-     * @param containerSelectorType
-     *            - has to be id, text, textContains, textStartsWith, Description,
-     *            DescriptionContains or className
-     * @param containerInstance
-     *            - has to an instance number of desired container
-     * @param eleSelectorType
-     *            - has to be id, text, textContains, textStartsWith, Description,
-     *            DescriptionContains or className
+     * @param scrollToEle has to be id, text, contentDesc or className
+     * @param scrollableContainer ExtendedWebElement type
+     * @param containerSelectorType has to be id, text, textContains, textStartsWith, Description, DescriptionContains or className
+     * @param containerInstance has to an instance number of desired container
+     * @param eleSelectorType has to be id, text, textContains, textStartsWith, Description, DescriptionContains or className
      * @return ExtendedWebElement
      *         <p>
      *         example of usage: ExtendedWebElement res =
@@ -404,20 +508,12 @@ public interface IAndroidUtils extends IMobileUtils {
     /**
      * Scrolls into view in specified container
      * 
-     * @param scrollToEle
-     *            - has to be id, text, contentDesc or className
-     * @param scrollableContainer
-     *            - ExtendedWebElement type
-     * @param containerSelectorType
-     *            - has to be id, text, textContains, textStartsWith, Description,
-     *            DescriptionContains or className
-     * @param containerInstance
-     *            - has to an instance number of desired container
-     * @param eleSelectorType
-     *            - has to be id, text, textContains, textStartsWith, Description,
-     *            DescriptionContains or className
-     * @param eleSelectorInstance
-     *            - has to an instance number of desired container
+     * @param scrollToEle has to be id, text, contentDesc or className
+     * @param scrollableContainer ExtendedWebElement type
+     * @param containerSelectorType has to be id, text, textContains, textStartsWith, Description, DescriptionContains or className
+     * @param containerInstance has to an instance number of desired container
+     * @param eleSelectorType has to be id, text, textContains, textStartsWith, Description, DescriptionContains or className
+     * @param eleSelectorInstance has to an instance number of desired container
      * @return ExtendedWebElement
      *         <p>
      *         example of usage: ExtendedWebElement res =
@@ -477,25 +573,20 @@ public interface IAndroidUtils extends IMobileUtils {
     /**
      * Scrolls into view in specified container
      * 
-     * @param scrollToEle
-     *            - has to be id, text, contentDesc or className
-     * @param scrollableContainer
-     *            - ExtendedWebElement type
-     * @param containerSelectorType
-     *            - container Selector type: has to be id, text, textContains,
-     *            textStartsWith, Description, DescriptionContains or className
-     * @param eleSelectorType
-     *            - scrollToEle Selector type: has to be id, text, textContains,
-     *            textStartsWith, Description, DescriptionContains or className
+     * @param scrollToEle has to be id, text, contentDesc or className
+     * @param scrollableContainer ExtendedWebElement type
+     * @param containerSelectorType container Selector type: has to be id, text, textContains, textStartsWith, Description, DescriptionContains or
+     *            className
+     * @param eleSelectorType scrollToEle Selector type: has to be id, text, textContains, textStartsWith, Description, DescriptionContains or
+     *            className
+     * 
      * @return ExtendedWebElement
      *         <p>
-     *         example of usage: ExtendedWebElement res =
-     *         AndroidUtils.scroll("News", newsListContainer,
-     *         AndroidUtils.SelectorType.CLASS_NAME,
-     *         AndroidUtils.SelectorType.TEXT);
+     *         example of usage: {@code ExtendedWebElement res = AndroidUtils.scroll("News", newsListContainer, AndroidUtils.SelectorType.CLASS_NAME,
+     *         AndroidUtils.SelectorType.TEXT);}
      **/
-    default public ExtendedWebElement scroll(String scrollToEle, ExtendedWebElement scrollableContainer,
-            SelectorType containerSelectorType, SelectorType eleSelectorType) {
+    default public ExtendedWebElement scroll(String scrollToEle, ExtendedWebElement scrollableContainer, SelectorType containerSelectorType,
+            SelectorType eleSelectorType) {
         ExtendedWebElement extendedWebElement = null;
         long startTime = TimeUnit.MILLISECONDS.toSeconds(System.currentTimeMillis());
         // TODO: support multi threaded WebDriver's removing DriverPool usage
@@ -543,15 +634,12 @@ public interface IAndroidUtils extends IMobileUtils {
     /**
      * Scrolls into view in specified container
      * 
-     * @param scrollableContainer
-     *            - ExtendedWebElement type
-     * @param containerSelectorType
-     *            - Selector type: has to be id, text, contentDesc or className
+     * @param scrollableContainer ExtendedWebElement type
+     * @param containerSelectorType Selector type: has to be id, text, contentDesc or className
      * @return scrollViewContainerFinder String
      *
      **/
-    default String getScrollContainerSelector(ExtendedWebElement scrollableContainer,
-            SelectorType containerSelectorType) {
+    default String getScrollContainerSelector(ExtendedWebElement scrollableContainer, SelectorType containerSelectorType) {
         UTILS_LOGGER.debug(scrollableContainer.getBy().toString());
         String scrollableContainerBy;
         String scrollViewContainerFinder = "";
@@ -598,10 +686,8 @@ public interface IAndroidUtils extends IMobileUtils {
     /**
      * Scrolls into view in specified container
      * 
-     * @param scrollToEle
-     *            - String type
-     * @param eleSelectorType
-     *            - Selector type: has to be id, text, contentDesc or className
+     * @param scrollToEle String type
+     * @param eleSelectorType Selector type: has to be id, text, contentDesc or className
      * @return String
      **/
     default String getScrollToElementSelector(String scrollToEle, SelectorType eleSelectorType) {
@@ -643,8 +729,7 @@ public interface IAndroidUtils extends IMobileUtils {
     /**
      * Scroll Timeout check
      * 
-     * @param startTime
-     *            - Long initial time for timeout count down
+     * @param startTime Long initial time for timeout count down
      **/
     default public void checkTimeout(long startTime) {
         long elapsed = TimeUnit.MILLISECONDS.toSeconds(System.currentTimeMillis()) - startTime;
@@ -655,20 +740,37 @@ public interface IAndroidUtils extends IMobileUtils {
     }
 
     /**
-     * getCurrentDeviceFocus - get actual device apk in focus.
-     *
+     * Get current pack in focus
+     * 
+     * @deprecated this method calls adb bypassing the driver, so use {@link #getCurrentPackage()} instead
      * @return String
      */
+    @Deprecated(since = "8.x", forRemoval = true)
     default public String getCurrentDeviceFocus() {
         String result = executeAdbCommand("shell dumpsys window windows | grep -E 'mCurrentFocus|mFocusedApp'");
         return result;
     }
 
     /**
-     * executeAbdCommand
+     * Get current device package
+     * 
+     * @return current package name, for example {@code com.android.settings}
+     * @throws UnsupportedOperationException if driver does not support this feature
+     */
+    default public String getCurrentPackage() {
+        StartsActivity startsActivity;
+        try {
+            startsActivity = (StartsActivity) getDriver();
+        } catch (ClassCastException e) {
+            throw new UnsupportedOperationException("Driver is not support getCurrentPackage method", e);
+        }
+        return startsActivity.getCurrentPackage();
+    }
+
+    /**
+     * execute ADB command bypassing the driver
      *
-     * @param command
-     *            String
+     * @param command adb command
      * @return String command output in one line
      */
     default public String executeAdbCommand(String command) {
@@ -681,19 +783,19 @@ public interface IAndroidUtils extends IMobileUtils {
         }
 
         String result = "";
-        UTILS_LOGGER.info("Command: " + command);
+        UTILS_LOGGER.info("Command: {}", command);
         String[] listOfCommands = command.split(" ");
 
         String[] execCmd = CmdLine.insertCommandsAfter(baseInitCmd, listOfCommands);
 
         try {
-            UTILS_LOGGER.info("Try to execute following cmd: " + CmdLine.arrayToString(execCmd));
+            UTILS_LOGGER.info("Try to execute following cmd: {}", CmdLine.arrayToString(execCmd));
             List<String> execOutput = executor.execute(execCmd);
-            UTILS_LOGGER.info("Output after execution ADB command: " + execOutput);
+            UTILS_LOGGER.info("Output after execution ADB command: {}", execOutput);
 
             result = execOutput.toString().replaceAll("\\[|\\]", "").replaceAll(", ", " ").trim();
 
-            UTILS_LOGGER.info("Returning Output: " + result);
+            UTILS_LOGGER.info("Returning Output: {}", result);
         } catch (Exception e) {
             UTILS_LOGGER.error("Error while executing adb command: " + command, e);
         }
@@ -702,205 +804,244 @@ public interface IAndroidUtils extends IMobileUtils {
     }
 
     /**
+     * Execute android-specific commands throw driver using adb
      * 
-     * @param command
-     * 
-     *            - ADB shell command represented as single String where 1st literal
-     *            is a command itself. Everything that follow is treated as
-     *            arguments.
+     * @param command adb-shell command represented as single String where 1st literal is a command itself.
+     *            Everything that follow is treated as arguments.<br>
      *
-     *            NOTE: "adb -s {UDID} shell" - should be omitted.
-     *            Example: "adb -s {UDID} shell list packages" - list packages
+     *            <b>IMPORTANT</b>: "adb -s {UDID} shell" - <b>should be omitted</b> in {@code command} param.<br>
+     *            Example: "adb -s {UDID} shell list packages" - list packages <br>
      * 
-     *            NOTE: shell arguments with space symbols are unsupported!
+     *            <b>IMPORTANT</b>: shell arguments with space symbols are unsupported! Use {@link #executeShell(List)} instead
      * 
-     * @return String - response (might be empty)
+     * @return response (might be empty)
+     * @throws UnsupportedOperationException if driver does not support this feature
+     * 
+     * @see <a href="https://github.com/appium/appium-uiautomator2-driver#platform-specific-extensions">Platform-specific extensions</a>
      */
     default public String executeShell(String command) {
-        UTILS_LOGGER.info("ADB command to be executed: adb shell ".concat(command.trim()));
+        UTILS_LOGGER.info("ADB command to be executed: adb shell {}", command);
         List<String> literals = Arrays.asList(command.split(" "));
         return executeShell(literals);
     }
 
     /**
-     * 
-     * @param commands list of string commands
-     * 
-     *            - ADB shell command represented as single String where 1st literal
-     *            is a command itself. Everything that follow is treated as
-     *            arguments.
+     * Execute android-specific commands throw driver using adb
      *
-     *            NOTE: "adb -s {UDID} shell" - should be omitted.
-     *            Example: "adb -s {UDID} shell list packages" - list packages
+     * @param commands list of commands and arguments<br>
+     *            adb-shell command represented as single String where 1st literal is a command itself.
+     *            Everything that follow is treated as arguments.<br>
      * 
-     * @return String - response (might be empty)
+     *            <b>IMPORTANT</b>: "adb -s {UDID} shell" - <b>should be omitted</b> in {@code command} param.<br>
+     *            Example: "adb -s {UDID} shell list packages" - list packages <br>
+     * 
+     * @return response (might be empty)
+     * @throws UnsupportedOperationException if driver does not support this feature
+     * 
+     * @see <a href="https://github.com/appium/appium-uiautomator2-driver#platform-specific-extensions">Platform-specific extensions</a>
      */
     default public String executeShell(List<String> commands) {
-        String commadKeyWord = commands.get(0);
+        JavascriptExecutor driver = null;
+        try {
+            driver = (JavascriptExecutor) getDriver();
+        } catch (ClassCastException e) {
+            throw new UnsupportedOperationException("Driver does not support executeShell method", e);
+        }
+
+        String command = commands.get(0);
         List<String> args = commands.subList(1, commands.size());
-        Map<String, Object> preparedCommand = ImmutableMap.of("command", commadKeyWord, "args", args);
-        WebDriver driver = getDriver();
-        String output = (String) ((JavascriptExecutor) driver).executeScript(SHELL_INIT_CONSOLE, preparedCommand);
+        Map<String, Object> preparedCommand = Map.of("command", command, "args", args);
+
+        String output = driver.executeScript("mobile: shell", preparedCommand)
+                .toString();
+
         if (!StringUtils.isEmpty(output)) {
-            UTILS_LOGGER.debug("ADB command output: " + output);
+            UTILS_LOGGER.debug("ADB command output: {}}", output);
         }
         return output;
     }
 
     /**
-     * This method performs an action corresponding to press Android device's native
-     * button to show all recent applications.
+     * <b>For internal use only</b>
+     * Start URI that may take users directly to the specific content in the app
+     *
+     * @param url the URL to start, for example {@code theapp://login/}
+     * @param packageName the name of the package to start the URI with, for example {@code com.mycompany}
+     * @return Response
+     * @see <a href="https://appiumpro.com/editions/84-reliably-opening-deep-links-across-platforms-and-devices">
+     *      Reliably Opening Deep Links Across Platforms and Devices</a>
+     */
+    default Response executeDeepLink(String url, String packageName) {
+        WebDriver driver = getDriver();
+
+        Map<String, Object> preparedCommand = Map.of("url", url, "package", packageName);
+        return executeMobileScript(driver, "mobile: deepLink", preparedCommand);
+    }
+
+    /**
+     * <b>For internal use only</b>
+     *
+     * Execute scripts
      * 
-     * NOTE: method could be used to get a list of running in background
-     * applications with respect to particular device.
+     * @param driver WebDriver instance
+     * @param scriptType name of script type, for example {@code mobile:deepLink}
+     */
+    default Response executeMobileScript(WebDriver driver, String scriptType, Map<String, Object> arguments) {
+        Map<String, ?> command = ImmutableMap.of(
+                "script", scriptType, "args", arguments);
+
+        ExecutesMethod executesMethod = null;
+
+        try {
+            executesMethod = (ExecutesMethod) driver;
+        } catch (ClassCastException e) {
+            throw new UnsupportedOperationException("Driver does not support executeMobileScript method", e);
+        }
+
+        return executesMethod.execute(DriverCommand.EXECUTE_SCRIPT, command);
+    }
+
+    /**
+     * Bring up the application switcher dialog
      */
     default public void displayRecentApps() {
-        executeShell(SHELL_RECENT_APPS_CMD);
+        // todo investigate replace by pressKeyboardKey(AndroidKey.APP_SWITCH, null);
+        executeShell("input keyevent KEYCODE_APP_SWITCH");
     }
 
     /**
-     * Tapping at native 'Home' button will be emulated. All applications will be
-     * closed to background.
+     * Emulate tap at native 'Home' button.<br>
+     * All applications will be closed to background.
      */
     default public void pressHome() {
-        executeShell(SHELL_PRESS_HOME_CMD);
+        executeShell("input keyevent 3");
     }
 
     /**
-     * Is used to get GPS service status.
+     * Get GPS service status.
      * 
-     * Response reflects which services are used for obtaining location:
-     * 
-     * - "gps" - GPS only (device only);
-     * 
-     * - "gps,network" - GPS + Wi-Fi + Bluetooth or cellular networks (High accuracy
-     * mode);
-     * 
-     * - "network" - Using Wi-Fi, Bluetooth or cellular networks (Battery saving
-     * mode);
-     * 
-     * @return boolean
+     * @return true if GPS enabled
      */
     default public boolean isGPSEnabled() {
-        String response = executeShell(SHELL_GPS_STATUS_CMD);
+        String response = executeShell("settings get secure location_providers_allowed");
+        // Response reflects which services are used for obtaining location:
+        // - "gps" - GPS only (device only);
+        // - "gps,network" - GPS + Wi-Fi + Bluetooth or cellular networks (High accuracy mode);
+        // - "network" - Using Wi-Fi, Bluetooth or cellular networks (Battery saving mode);
         return response.contains("gps");
     }
 
+    /**
+     * Enable GPS
+     */
     default public void enableGPS() {
-        executeShell(SHELL_ENABLE_GPS_CMD);
+        executeShell("settings put secure location_providers_allowed +gps");
     }
 
     /**
+     * Disable GPS<br>
      * Works if ONLY DEVICE (GPS sensor) is user for obtaining location
      */
     default public void disableGPS() {
-        executeShell(SHELL_DISABLE_GPS_CMD);
+        executeShell("settings put secure location_providers_allowed -gps");
     }
 
     /**
-     * This command will save screenshot to specified folder on device's OS using
-     * provided path.
+     * Save screenshot to specified folder on device's OS using provided path
      * 
-     * @param filepath
-     *            - path to save screenshot to device's OS (/storage/emulated/0/Download/scr.png).
+     * @param filepath path to save screenshot to device's OS, for example {@code /storage/emulated/0/Download/scr.png}.
      */
     default public void takeScreenShot(String filepath) {
-        UTILS_LOGGER.info("Screenshot will be saved to: " + filepath);
-        String command = String.format(SHELL_TAKE_SCREENSHOT_CMD.concat(" %s"), filepath);
-        executeShell(command);
+        UTILS_LOGGER.info("Screenshot will be saved to: {}", filepath);
+        executeShell(String.format("screencap -p %s", filepath));
     }
 
     /**
-     * This method provides app's version for the app that is already installed to
-     * devices, based on its package name.
-     * In order to do that we search for "versionCode" parameter in system dump.
-     * 
-     * @param packageName String
-     * 
-     * @return appVersion String
+     * Get app's version for the app that is already installed to devices, based on its package name.<br>
+     *
+     * @param packageName name of the package
+     * @return appVersion version of app (versionCode from system dump), for example {@code 11200050}
      */
     default public String getAppVersion(String packageName) {
-        String command = "dumpsys package ".concat(packageName);
-        String output = executeShell(command);
+        String output = executeShell("dumpsys package ".concat(packageName));
+        // we search for "versionCode" parameter in system dump.
         String versionCode = StringUtils.substringBetween(output, "versionCode=", " ");
-        UTILS_LOGGER.info(String.format("Version code for '%s' package name is %s", packageName, versionCode));
+        UTILS_LOGGER.info("Version code for '{}' package name is {}", packageName, versionCode);
         return versionCode;
     }
 
     /**
-     * This method provides app's version name for the app that is already installed to
-     * devices, based on its package name.
-     * In order to do that we search for "versionName" parameter in system dump.
-     * Ex. "versionCode" returns 11200050, "versionName" returns 11.2.0
+     * Get app's version name for the app that is already installed to devices, based on its package name<br>
      * 
-     * @param packageName String
-     * @return appVersion String
+     * @param packageName name of the package
+     * @return version of app(versionName from system dump), for example {@code 11.2.0}
      */
     default public String getAppVersionName(String packageName) {
         String command = "dumpsys package ".concat(packageName);
         String output = this.executeShell(command);
+        // we search for "versionName" parameter in system dump.
         String versionName = StringUtils.substringBetween(output, "versionName=", "\n");
-        UTILS_LOGGER.info(String.format("Version name for '%s' package name is %s", packageName, versionName));
+        UTILS_LOGGER.info("Version name for '{}' package name is {}", packageName, versionName);
         return versionName;
     }
 
     /**
-     * To open Android device native settings
+     * Open android device native settings
      */
     default public void openDeviceSettings() {
-        executeShell(SHELL_OPEN_DEVICE_SETTINGS_CMD);
+        executeShell("am start -a android.settings.SETTINGS");
     }
 
     /**
-     * Method to reset test specific application by package name
+     * Open development settings
+     */
+    default public void openDeveloperOptions() {
+        executeShell("am start -n com.android.settings/.DevelopmentSettings");
+    }
+
+    /**
+     * Reset test specific application by package name<br>
      * 
-     * App's settings will be reset. User will be logged out. Application will be
-     * closed to background.
+     * App's settings will be reset. User will be logged out. Application will be closed to background.
      * 
-     * @param packageName String
+     * @param packageName name of the package
      */
     default public void clearAppCache(String packageName) {
-        UTILS_LOGGER.info("Will clear data for the following app: " + packageName);
-        String command = String.format(SHELL_CLEAR_CACHE_CMD.concat(" %s"), packageName);
-        String response = executeShell(command);
-        UTILS_LOGGER.info(
-                String.format("Output after resetting custom application by package (%s): ", packageName) + response);
+        UTILS_LOGGER.info("Will clear data for the following app: {}", packageName);
+        String response = executeShell(String.format("pm clear %s", packageName));
+        UTILS_LOGGER.info("Output after resetting custom application by package ({}): {}", packageName, response);
         if (!response.contains("Success")) {
-            UTILS_LOGGER.warn(String.format("App data was not cleared for %s app", packageName));
+            UTILS_LOGGER.warn("App data was not cleared for {} app", packageName);
         }
     }
 
     /**
-     * With this method user is able to trigger a deeplink (link to specific place
-     * within the application) or event open URL in mobile browser.
+     * Trigger a deeplink (link to specific place within the application) or event open URL in mobile browser<br>
+     * <br>
      * 
-     * NOTE, that to open URL in browser, URL should starts with "https://www.{place
-     * your link here}".
+     * NOTE, that to open URL in browser, URL should start with "https://www.{place your link here}"<br>
+     * NOTE that not all deeplinks require package name
      * 
-     * NOTE that not all deeplinks require package name.
-     * 
-     * @param link
-     *            - URL to trigger
+     * @param link URL to trigger
      */
     default public void openURL(String link) {
         // TODO: #1380 make openURL call from this mobile interface in DriverHelper
-        UTILS_LOGGER.info("Following link will be triggered via ADB: " + link);
-        String command = String.format(SHELL_OPEN_URL_CMD.concat(" %s"), link);
-        executeShell(command);
+        UTILS_LOGGER.info("Following link will be triggered via ADB: {}", link);
+        executeShell(String.format("am start -a android.intent.action.VIEW %s", link));
     }
 
     /**
-     * With this method user is able to trigger a deeplink (link to specific place
-     * within the application)
-     * 
-     * @param link String
-     * @param packageName String
+     * Start URI that may take users directly to the specific content in the app
+     *
+     * @param url the URL to start, for example {@code theapp://login/}
+     * @param packageName the name of the package to start the URI with, for example {@code com.mycompany}
+     * @see <a href="https://appiumpro.com/editions/84-reliably-opening-deep-links-across-platforms-and-devices">
+     *      Reliably Opening Deep Links Across Platforms and Devices</a>
      */
-    default public void triggerDeeplink(String link, String packageName) {
-        Map<String, Object> preparedCommand = ImmutableMap.of("url", link, "package", packageName);
+    default public void triggerDeeplink(String url, String packageName) {
+        WebDriver driver = getDriver();
         try {
-            WebDriver driver = getDriver();
-            ((JavascriptExecutor) driver).executeScript(SHELL_INIT_DEEPLINK_CONSOLE, preparedCommand);
+            executeDeepLink(url, packageName);
         } catch (WebDriverException wde) {
             // TODO: need to pay attention
             UTILS_LOGGER.warn("org.openqa.selenium.WebDriverException is caught and ignored.", wde);
@@ -909,81 +1050,138 @@ public interface IAndroidUtils extends IMobileUtils {
 
     /**
      * To get list of granted/denied/requested permission for specified application
-     * 
-     * @param packageName String
-     * @param type PermissionType
+     *
+     * if response is not correct, return null
+     *
+     * @param appPackage the application package to get permissions from, for example {@code }
+     * @param type permission type. See {@link PermissionType}
      * @return ArrayList String
+     * @throws UnsupportedOperationException if driver does not support this feature
      */
     @SuppressWarnings("unchecked")
-    default public ArrayList<String> getAppPermissions(String packageName, PermissionType type) {
-        Map<String, Object> preparedCommand = ImmutableMap.of("type", type.getType(), "package", packageName);
-        WebDriver driver = getDriver();
-        return (ArrayList<String>) ((JavascriptExecutor) driver).executeScript(SHELL_INIT_GET_PERMISSION_CONSOLE, preparedCommand);
+    default public List<String> getAppPermissions(String appPackage, PermissionType type) {
+        Map<String, Object> preparedCommand = ImmutableMap.of("type", type.getType(), "package", appPackage);
+        return (List<String>) executeMobileScript(getDriver(), "mobile: getPermissions", preparedCommand);
     }
 
     /**
-     * To change (grant or revoke) application permissions.
+     * Change package permissions in runtime
      * 
      * @param packageName String
-     * @param action PermissionAction
-     * @param permissions Permission
+     * @param action permission action, see {@link PermissionAction}
+     * @param permissions list of permissions {@link Permission}
+     * @throws UnsupportedOperationException if driver does not support this feature
      */
     default public void changePermissions(String packageName, PermissionAction action, Permission... permissions) {
-        ArrayList<String> permissionsStr = new ArrayList<>();
-        Arrays.asList(permissions).forEach(p -> permissionsStr.add(p.getPermission()));
-        Map<String, Object> preparedCommand = ImmutableMap.of("action", action.getAction(), "appPackage", packageName,
+        List<String> permissionsStr = Arrays.stream(permissions)
+                .map(Permission::getPermission)
+                .collect(Collectors.toList());
+
+        Map<String, Object> preparedCommand = ImmutableMap.of(
+                "action", action.getAction(),
+                "appPackage", packageName,
                 "permissions", permissionsStr);
-        WebDriver driver = getDriver();
-        ((JavascriptExecutor)driver).executeScript(SHELL_INIT_CHANGE_PERMISSION_CONSOLE, preparedCommand);
+        executeMobileScript(getDriver(), "mobile: changePermissions", preparedCommand);
     }
 
     /**
      * Method to enter text to ACTIVATED input field.
      * 
-     * NOTE: that it might be necessary to escape some special characters.
-     * Space-symbol is already escaped.
-     * 
+     * NOTE: that it might be necessary to escape some special characters. Space-symbol is already escaped.
      * NOTE2: input field should be cleared previously.
      * 
-     * @param text String
+     * @param text text to enter in the field
      */
     default public void typeWithADB(String text) {
-        UTILS_LOGGER.info(String.format("Will enter '%s' to an active input field via ADB.", text));
-        // In this method characters are entered one by one because sometimes some
-        // characters might be omitted if to enter whole text at a time.
+        UTILS_LOGGER.info("Will enter '{}' to an active input field via ADB.", text);
+        // In this method characters are entered one by one because sometimes some characters might be omitted if to enter whole text at a time.
         char[] array = text.toCharArray();
         for (char sym : array) {
+            // todo refactor
             String ch = (sym == ' ') ? "%s" : String.valueOf(sym);
-            String command = SHELL_INPUT_TXT_CMD + ch;
-            executeShell(command);
+            executeShell(String.format("input text %s", ch));
         }
     }
 
-    default public boolean isWifiEnabled() {
-        WebDriver driver = getDriver();
-        boolean enabled = ((HasNetworkConnection) driver).getConnection().isWiFiEnabled();
-        UTILS_LOGGER.info("Wi-Fi enabled: " + enabled);
+    /**
+     * Is airplane mode enabled or not
+     * 
+     * @return true if airplane mode is enabled
+     * @throws UnsupportedOperationException if driver does not support this feature
+     */
+    default public boolean isAirplaneModeEnabled() {
+        HasNetworkConnection driver = null;
+        try {
+            driver = (HasNetworkConnection) getDriver();
+        } catch (ClassCastException e) {
+            throw new UnsupportedOperationException("Driver is not support isAirplaneModeEnabled method", e);
+        }
+        boolean enabled = driver.getConnection()
+                .isAirplaneModeEnabled();
+        UTILS_LOGGER.info("AirplaneMode enabled: {}", enabled);
         return enabled;
     }
 
-    default public void enableWifi() {
-        boolean enabled = isWifiEnabled();
-        if (!enabled) {
-            WebDriver driver = getDriver();
-            ((SupportsNetworkStateManagement)driver).toggleWifi();
-            return;
+    /**
+     * Is Wi-Fi connection enabled or not
+     *
+     * @return true if Wi-Fi connection is enabled
+     * @throws UnsupportedOperationException if driver does not support this feature
+     */
+    default public boolean isWifiEnabled() {
+        HasNetworkConnection driver = null;
+        try {
+            driver = (HasNetworkConnection) getDriver();
+        } catch (ClassCastException e) {
+            throw new UnsupportedOperationException("Driver is not support isWifiEnabled method", e);
         }
-        UTILS_LOGGER.info("Wifi is already anebled. No actions needed");
+        boolean enabled = driver.getConnection().isWiFiEnabled();
+        UTILS_LOGGER.info("Wi-Fi enabled: {}", enabled);
+        return enabled;
     }
 
-    default public void disableWifi() {
+    /**
+     * Turns on Wi-Fi, if it's off
+     * 
+     * @throws UnsupportedOperationException if driver does not support this feature
+     */
+    default public void enableWifi() {
         boolean enabled = isWifiEnabled();
         if (enabled) {
-            WebDriver driver = getDriver();
-            ((SupportsNetworkStateManagement) driver).toggleWifi();
+            UTILS_LOGGER.info("Wifi is already enabled. No actions needed");
             return;
         }
-        UTILS_LOGGER.info("Wifi is already disabled. No actions needed");
+
+        SupportsNetworkStateManagement driver = null;
+        try {
+            driver = (SupportsNetworkStateManagement) getDriver();
+        } catch (ClassCastException e) {
+            throw new UnsupportedOperationException("Driver is not support enableWifi method", e);
+        }
+
+        driver.toggleWifi();
+    }
+
+    /**
+     * Turns off Wi-Fi, if it's on
+     * 
+     * @throws UnsupportedOperationException if driver does not support this feature
+     */
+    default public void disableWifi() {
+        boolean enabled = isWifiEnabled();
+        if (!enabled) {
+            UTILS_LOGGER.info("Wifi is already disabled. No actions needed");
+            return;
+        }
+
+        SupportsNetworkStateManagement driver = null;
+        try {
+            driver = (SupportsNetworkStateManagement) getDriver();
+        } catch (ClassCastException e) {
+            throw new UnsupportedOperationException("Driver is not support disableWifi method", e);
+        }
+
+        driver.toggleWifi();
     }
 
     /**
@@ -992,8 +1190,7 @@ public interface IAndroidUtils extends IMobileUtils {
      * @param appName - Name of the app as it appears in the device's Apps list (Language specific)
      */
     default void openAppMenuFromDeviceSettings(String appName) {
-        AndroidService androidService = AndroidService.getInstance();
-        androidService.executeAdbCommand("shell am start -a android.settings.APPLICATION_SETTINGS");
+        executeAdbCommand("shell am start -a android.settings.APPLICATION_SETTINGS");
 
         // initializing appItem with ExtendedWebElement constructor that initialize search context
         ExtendedWebElement appItem = new ExtendedWebElement(By.xpath(String.format("//*[contains(@text, '%s')]", appName)), "notifications",
@@ -1021,45 +1218,483 @@ public interface IAndroidUtils extends IMobileUtils {
         // initializing with driver context
         element = new ExtendedWebElement(By.xpath("//*[@resource-id='com.android.settings:id/switch_text']/following-sibling::android.widget.Switch"),
                 "toggle", driver, driver);
-        if (Boolean.valueOf(element.getAttribute("checked")) != setValue) {
+        if (Boolean.parseBoolean(element.getAttribute("checked")) != setValue) {
             element.click();
         }
     }
 
     /**
      * @return - Returns if the device in use has a running LTE connection
+     * @throws UnsupportedOperationException if driver does not support this feature
      */
     default boolean isCarrierConnectionAvailable() {
-        AndroidService androidService = AndroidService.getInstance();
-        WebDriver driver = getDriver();
+        HasNetworkConnection hasNetworkConnection = null;
 
-        boolean status = ((HasNetworkConnection) driver).getConnection().isDataEnabled();
+        try {
+            hasNetworkConnection = (HasNetworkConnection) getDriver();
+        } catch (ClassCastException e) {
+            throw new UnsupportedOperationException("Driver does not support isCarrierConnectionAvailable method", e);
+        }
+
+        boolean status = hasNetworkConnection.getConnection()
+                .isDataEnabled();
         boolean linkProperties = false;
 
-        String linkProp = androidService.executeAdbCommand("shell dumpsys telephony.registry | grep mPreciseDataConnectionState");
-        UTILS_LOGGER.info("PROP:  " + linkProp);
+        String linkProp = executeAdbCommand("shell dumpsys telephony.registry | grep mPreciseDataConnectionState");
+        UTILS_LOGGER.info("PROP:  {}", linkProp);
         if (!linkProp.isEmpty()) {
             linkProperties = !StringUtils.substringBetween(linkProp, "APN: ", " ").equals("null");
         }
-        UTILS_LOGGER.info("STATUS ENABLED: " + status);
-        UTILS_LOGGER.info("CARRIER AVAILABLE: " + linkProperties);
-        return ((HasNetworkConnection) driver).getConnection().isDataEnabled() && linkProperties;
+        UTILS_LOGGER.info("STATUS ENABLED: {}", status);
+        UTILS_LOGGER.info("CARRIER AVAILABLE: {}", linkProperties);
+        return hasNetworkConnection.getConnection().isDataEnabled() && linkProperties;
     }
 
     /**
-     * @return - Returns the value of the device model in use as a String
+     * Get device model<br>
+     *
+     * <b>Important: </b> before carina 8.x this method calls adb bypassing the driver,
+     * but now it gets device model using driver
+     * 
+     * @return device model, for example {@code G3112}
      */
-    default String getDeviceModel() {
-        AndroidService androidService = AndroidService.getInstance();
-        return StringUtils.substringAfter(androidService.executeAdbCommand("shell getprop | grep 'ro.product.model'"), "ro.product.model: ");
+    default public String getDeviceModel() {
+        // executeShell returns model with \n, for example G3112\n, so need to trim
+        return executeShell("getprop ro.product.model")
+                .trim();
     }
 
     default public void openStatusBar() {
-        executeShell(SHELL_OPEN_STATUS_BAR_CMD);
+        executeShell("cmd statusbar expand-notifications");
     }
 
     default public void closeStatusBar() {
-        executeShell(SHELL_CLOSE_STATUS_BAR_CMD);
+        executeShell("cmd statusbar collapse");
     }
 
+    /**
+     * Get device timezone
+     * 
+     * @return device timezone, for example {@code Europe/Moscow}
+     */
+    default public String getDeviceTimezone() {
+        // executeShell returns timezone with \n, for example Europe/Moscow\n, so need to trim
+        return executeShell("getprop persist.sys.timezone")
+                .trim();
+    }
+
+    /**
+     * Set android device default timezone and language based on config or to GMT and En
+     * without restoring actual focused apk
+     */
+    default public void setDeviceDefaultTimeZoneLanguage() {
+        setDeviceDefaultTimeZoneLanguage(false);
+    }
+
+    /**
+     * Set default timezone and language based on config or to GMT and En
+     *
+     * @param returnAppFocus - if true store actual Focused apk and activity, than restore after setting Timezone and Language.
+     */
+    default public void setDeviceDefaultTimeZoneLanguage(boolean returnAppFocus) {
+        try {
+            Activity activity = null;
+            String os = IDriverPool.getDefaultDevice().getOs();
+            if (os.equalsIgnoreCase(SpecialKeywords.ANDROID)) {
+
+                AndroidService androidService = AndroidService.getInstance();
+
+                if (returnAppFocus) {
+                    activity = new Activity(getCurrentPackage(), getCurrentActivity());
+                }
+
+                String deviceTimezone = Configuration.get(Configuration.Parameter.DEFAULT_DEVICE_TIMEZONE);
+                String deviceTimeFormat = Configuration.get(Configuration.Parameter.DEFAULT_DEVICE_TIME_FORMAT);
+                String deviceLanguage = Configuration.get(Configuration.Parameter.DEFAULT_DEVICE_LANGUAGE);
+
+                DeviceTimeZone.TimeFormat timeFormat = DeviceTimeZone.TimeFormat.parse(deviceTimeFormat);
+                DeviceTimeZone.TimeZoneFormat timeZone = DeviceTimeZone.TimeZoneFormat.parse(deviceTimezone);
+
+                UTILS_LOGGER.info("Set device timezone to {}", timeZone);
+                UTILS_LOGGER.info("Set device time format to {}", timeFormat);
+                UTILS_LOGGER.info("Set device language to {}", deviceLanguage);
+
+                boolean timeZoneChanged = androidService.setDeviceTimeZone(timeZone.getTimeZone(), timeZone.getSettingsTZ(), timeFormat);
+                boolean languageChanged = setDeviceLanguage(deviceLanguage);
+
+                UTILS_LOGGER.info("Device TimeZone was changed to timeZone '{}' : {}. Device Language was changed to language '{}': {}",
+                        deviceTimezone,
+                        timeZoneChanged, deviceLanguage, languageChanged);
+
+                if (returnAppFocus) {
+                    androidService.startActivity(activity);
+                }
+
+            } else {
+                UTILS_LOGGER.info("Current OS is {}. But we can set default TimeZone and Language only for Android.", os);
+            }
+        } catch (Exception e) {
+            UTILS_LOGGER.error("Error while setting to device default timezone and language!", e);
+        }
+    }
+
+    /**
+     * Retrieves battery info from the device under test
+     *
+     * @return BatteryInfo instance, containing the battery information
+     * @throws UnsupportedOperationException if driver does not support this feature
+     */
+    default public AndroidBatteryInfo getBatteryInfo() {
+        HasBattery<AndroidBatteryInfo> driver = null;
+        try {
+            driver = (HasBattery<AndroidBatteryInfo>) getDriver();
+        } catch (ClassCastException e) {
+            throw new UnsupportedOperationException("Driver is not support getBatteryInfo method", e);
+        }
+        return driver.getBatteryInfo();
+    }
+
+    /**
+     * This method should start arbitrary activity during a test. If the activity belongs to
+     * another application, that application is started and the activity is opened.
+     * <p>
+     * Usage:
+     * </p>
+     * 
+     * <pre>
+     * {
+     *     &#64;code
+     *     Activity activity = new Activity("app package goes here", "app activity goes here");
+     *     activity.setWaitAppPackage("app wait package goes here");
+     *     activity.setWaitAppActivity("app wait activity goes here");
+     *     driver.startActivity(activity);
+     * }
+     * </pre>
+     *
+     * @param activity The {@link Activity} object
+     * @throws UnsupportedOperationException if driver does not support this feature
+     */
+    default public void startActivity(Activity activity) {
+        StartsActivity driver = null;
+        try {
+            driver = (StartsActivity) getDriver();
+        } catch (ClassCastException e) {
+            throw new UnsupportedOperationException("Driver is not support startActivity method", e);
+        }
+        driver.startActivity(activity);
+    }
+
+    /**
+     * Get the current activity being run on the mobile device
+     *
+     * @return a current activity being run on the mobile device
+     * @throws UnsupportedOperationException if driver does not support this feature
+     */
+    default public String getCurrentActivity() {
+        StartsActivity driver = null;
+        try {
+            driver = (StartsActivity) getDriver();
+        } catch (ClassCastException e) {
+            throw new UnsupportedOperationException("Driver is not support getCurrentActivity method", e);
+        }
+        return driver.currentActivity();
+    }
+
+    /**
+     * Get the current activity being run on the mobile device with package name (apkPackage/apkActivity)
+     *
+     * @return {@code apkPackage/apkActivity} string
+     */
+    default public String getCurrentPackageActivity() {
+        StartsActivity driver = null;
+        try {
+            driver = (StartsActivity) getDriver();
+        } catch (ClassCastException e) {
+            throw new UnsupportedOperationException("Driver is not support getCurrentPackageActivity method", e);
+        }
+        return driver.getCurrentPackage() + "/" + driver.currentActivity();
+    }
+
+    /**
+     * Retrieve the display density of the Android device
+     * 
+     * @return The density value in dpi
+     * @throws UnsupportedOperationException if driver does not support this feature
+     */
+    default public Long getDisplayDensity() {
+        HasAndroidDeviceDetails driver = null;
+        try {
+            driver = (HasAndroidDeviceDetails) getDriver();
+        } catch (ClassCastException e) {
+            throw new UnsupportedOperationException("Driver is not support getDisplayDensity method", e);
+        }
+        return driver.getDisplayDensity();
+    }
+
+    /**
+     * Retrieve visibility and bounds information of the status and navigation bars
+     * 
+     * @return The map where keys are bar types and values are mappings of bar properties
+     * @throws UnsupportedOperationException if driver does not support this feature
+     */
+    default public Map<String, Map<String, Object>> getSystemBars() {
+        HasAndroidDeviceDetails driver = null;
+        try {
+            driver = (HasAndroidDeviceDetails) getDriver();
+        } catch (ClassCastException e) {
+            throw new UnsupportedOperationException("Driver is not support getSystemBars method", e);
+        }
+        return driver.getSystemBars();
+    }
+
+    /**
+     * returns the information type of the system state which is supported to read
+     * as like cpu, memory, network traffic, and battery
+     * 
+     * @return output - array like below
+     *         [cpuinfo, batteryinfo, networkinfo, memoryinfo]
+     * @throws UnsupportedOperationException if driver does not support this feature
+     */
+    default public List<String> getSupportedPerformanceDataTypes() {
+        HasSupportedPerformanceDataType driver = null;
+        try {
+            driver = (HasSupportedPerformanceDataType) getDriver();
+        } catch (ClassCastException e) {
+            throw new UnsupportedOperationException("Driver is not support getSupportedPerformanceDataTypes method", e);
+        }
+        return driver.getSupportedPerformanceDataTypes();
+    }
+
+    /**
+     * returns the resource usage information of the application. the resource is one of the system state
+     * which means cpu, memory, network traffic, and battery
+     *
+     * @param packageName the package name of the application
+     * @param dataType the type of system state which wants to read.
+     *            It should be one of the supported performance data types,
+     *            the return value of the function "getSupportedPerformanceDataTypes"
+     * @param dataReadTimeout the number of attempts to read
+     * @return table of the performance data, The first line of the table represents the type of data.
+     *         The remaining lines represent the values of the data.
+     *         in case of battery info : [[power], [23]]
+     *         in case of memory info :
+     *         [[totalPrivateDirty, nativePrivateDirty, dalvikPrivateDirty, eglPrivateDirty, glPrivateDirty,
+     *         totalPss, nativePss, dalvikPss, eglPss, glPss, nativeHeapAllocatedSize, nativeHeapSize],
+     *         [18360, 8296, 6132, null, null, 42588, 8406, 7024, null, null, 26519, 10344]]
+     *         in case of network info :
+     *         [[bucketStart, activeTime, rxBytes, rxPackets, txBytes, txPackets, operations, bucketDuration,],
+     *         [1478091600000, null, 1099075, 610947, 928, 114362, 769, 0, 3600000],
+     *         [1478095200000, null, 1306300, 405997, 509, 46359, 370, 0, 3600000]]
+     *         in case of network info :
+     *         [[st, activeTime, rb, rp, tb, tp, op, bucketDuration],
+     *         [1478088000, null, null, 32115296, 34291, 2956805, 25705, 0, 3600],
+     *         [1478091600, null, null, 2714683, 11821, 1420564, 12650, 0, 3600],
+     *         [1478095200, null, null, 10079213, 19962, 2487705, 20015, 0, 3600],
+     *         [1478098800, null, null, 4444433, 10227, 1430356, 10493, 0, 3600]]
+     *         in case of cpu info : [[user, kernel], [0.9, 1.3]]
+     * @throws UnsupportedOperationException if driver does not support this feature
+     */
+    default List<List<Object>> getPerformanceData(String packageName, String dataType, int dataReadTimeout) {
+        HasSupportedPerformanceDataType driver = null;
+        try {
+            driver = (HasSupportedPerformanceDataType) getDriver();
+        } catch (ClassCastException e) {
+            throw new UnsupportedOperationException("Driver is not support getPerformanceData method", e);
+        }
+        return driver.getPerformanceData(packageName, dataType, dataReadTimeout);
+    }
+
+    /**
+     * Authenticate users by using their finger print scans on supported emulators
+     *
+     * @param fingerPrintId finger prints stored in Android Keystore system (from 1 to 10)
+     * @throws UnsupportedOperationException if driver does not support this feature
+     */
+    default public void authByFingerPrint(int fingerPrintId) {
+        AuthenticatesByFinger driver = null;
+        try {
+            driver = (AuthenticatesByFinger) getDriver();
+        } catch (ClassCastException e) {
+            throw new UnsupportedOperationException("Driver is not support authByFingerPrint method", e);
+        }
+        driver.fingerPrint(fingerPrintId);
+    }
+
+    /**
+     * Emulate send SMS event on the connected emulator
+     *
+     * @param phoneNumber The phone number of message sender
+     * @param message The message content
+     * @throws UnsupportedOperationException if driver does not support this feature
+     */
+    default public void sendSMS(String phoneNumber, String message) {
+        SupportsSpecialEmulatorCommands driver = null;
+        try {
+            driver = (SupportsSpecialEmulatorCommands) getDriver();
+        } catch (ClassCastException e) {
+            throw new UnsupportedOperationException("Driver is not support sendSMS method", e);
+        }
+        driver.sendSMS(phoneNumber, message);
+    }
+
+    /**
+     * Emulate GSM call event on the connected emulator
+     *
+     * @param phoneNumber The phone number of the caller
+     * @param gsmCallActions One of available {@link GsmCallActions} values
+     * @throws UnsupportedOperationException if driver does not support this feature
+     */
+    default public void makeGsmCall(String phoneNumber, GsmCallActions gsmCallActions) {
+        SupportsSpecialEmulatorCommands driver = null;
+        try {
+            driver = (SupportsSpecialEmulatorCommands) getDriver();
+        } catch (ClassCastException e) {
+            throw new UnsupportedOperationException("Driver is not support makeGsmCall method", e);
+        }
+        driver.makeGsmCall(phoneNumber, gsmCallActions);
+    }
+
+    /**
+     * Emulate GSM signal strength change event on the connected emulator
+     *
+     * @param gsmSignalStrength One of available {@link GsmSignalStrength} values
+     * @throws UnsupportedOperationException if driver does not support this feature
+     */
+    default public void setGsmSignalStrength(GsmSignalStrength gsmSignalStrength) {
+        SupportsSpecialEmulatorCommands driver = null;
+        try {
+            driver = (SupportsSpecialEmulatorCommands) getDriver();
+        } catch (ClassCastException e) {
+            throw new UnsupportedOperationException("Driver is not support setGsmSignalStrength method", e);
+        }
+        driver.setGsmSignalStrength(gsmSignalStrength);
+    }
+
+    /**
+     * Emulate GSM voice event on the connected emulator
+     *
+     * @param gsmVoiceState One of available {@link GsmVoiceState} values
+     * @throws UnsupportedOperationException if driver does not support this feature
+     */
+    default public void setGsmVoice(GsmVoiceState gsmVoiceState) {
+        SupportsSpecialEmulatorCommands driver = null;
+        try {
+            driver = (SupportsSpecialEmulatorCommands) getDriver();
+        } catch (ClassCastException e) {
+            throw new UnsupportedOperationException("Driver is not support setGsmVoice method", e);
+        }
+        driver.setGsmVoice(gsmVoiceState);
+    }
+
+    /**
+     * Emulate network speed change event on the connected emulator
+     *
+     * @param networkSpeed One of available {@link NetworkSpeed} values
+     * @throws UnsupportedOperationException if driver does not support this feature
+     */
+    default public void setNetworkSpeed(NetworkSpeed networkSpeed) {
+        SupportsSpecialEmulatorCommands driver = null;
+        try {
+            driver = (SupportsSpecialEmulatorCommands) getDriver();
+        } catch (ClassCastException e) {
+            throw new UnsupportedOperationException("Driver is not support setNetworkSpeed method", e);
+        }
+        driver.setNetworkSpeed(networkSpeed);
+    }
+
+    /**
+     * Emulate power capacity change on the connected emulator
+     *
+     * @param percent Percentage value in range [0, 100]
+     * @throws UnsupportedOperationException if driver does not support this feature
+     */
+    default public void setPowerCapacity(int percent) {
+        SupportsSpecialEmulatorCommands driver = null;
+        try {
+            driver = (SupportsSpecialEmulatorCommands) getDriver();
+        } catch (ClassCastException e) {
+            throw new UnsupportedOperationException("Driver is not support setPowerCapacity method", e);
+        }
+        driver.setPowerCapacity(percent);
+    }
+
+    /**
+     * Emulate power state change on the connected emulator
+     *
+     * @param powerACState One of available {@link PowerACState} values
+     * @throws UnsupportedOperationException if driver does not support this feature
+     */
+    default public void setPowerAC(PowerACState powerACState) {
+        SupportsSpecialEmulatorCommands driver = null;
+        try {
+            driver = (SupportsSpecialEmulatorCommands) getDriver();
+        } catch (ClassCastException e) {
+            throw new UnsupportedOperationException("Driver is not support setPowerAC method", e);
+        }
+        driver.setPowerAC(powerACState);
+    }
+
+    /**
+     * Set the content of device's clipboard
+     *
+     * @param label clipboard data label
+     * @param contentType one of supported content types
+     * @param base64Content base64-encoded content to be set
+     * @throws UnsupportedOperationException if driver does not support this feature
+     */
+    default public void setClipboard(String label, ClipboardContentType contentType, byte[] base64Content) {
+        HasAndroidClipboard driver = null;
+        try {
+            driver = (HasAndroidClipboard) getDriver();
+        } catch (ClassCastException e) {
+            throw new UnsupportedOperationException("Driver is not support setClipboard method", e);
+        }
+        driver.setClipboard(label, contentType, base64Content);
+    }
+
+    /**
+     * Set the clipboard text
+     *
+     * @param label clipboard data label
+     * @param text The actual text to be set
+     * @throws UnsupportedOperationException if driver does not support this feature
+     */
+    default public void setClipboardText(String label, String text) {
+        setClipboard(label, ClipboardContentType.PLAINTEXT, Base64
+                .getEncoder()
+                .encode(text.getBytes(StandardCharsets.UTF_8)));
+    }
+
+    /**
+     * Replaces element value with the given one
+     *
+     * @param element The destination element
+     * @param value The value to set
+     * @throws UnsupportedOperationException if driver does not support this feature
+     */
+    default public void replaceElementValue(RemoteWebElement element, String value) {
+        CanReplaceElementValue driver = null;
+        try {
+            driver = (CanReplaceElementValue) getDriver();
+        } catch (ClassCastException e) {
+            throw new UnsupportedOperationException("Driver is not support replaceElementValue method", e);
+        }
+        driver.replaceElementValue(element, value);
+    }
+
+    /**
+     * Allows to set geo location with extended parameters available for Android platform
+     *
+     * @param location the location object to set, see {@link AndroidGeoLocation}
+     * @throws UnsupportedOperationException if driver does not support this feature
+     */
+    default void setLocation(AndroidGeoLocation location) {
+        SupportsExtendedGeolocationCommands driver = null;
+        try {
+            driver = (SupportsExtendedGeolocationCommands) getDriver();
+        } catch (ClassCastException e) {
+            throw new UnsupportedOperationException("Driver is not support setLocation method", e);
+        }
+        driver.setLocation(location);
+    }
 }
